<resources>
    <string name="app_name">uTutor</string>
    <string name="sansSerifLight">sans-serif-light</string>
    <string name="setAppointment">Set an Appointment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign In</string>
    <string name="Search_page">uTutor Search Page</string>
    <string name="app_label">uTutor</string>
    <string name="search_hint">Search</string>
    <string name="error_field_required">Required Field is Empty</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_incorrect_password">Invalid Password</string>
    <string name="Story">We are Computer Science students who made this app as our senior project. uTutor helps people meet Tutors and gives them the ability to view each other\'s profiles and people can see the ratings of Tutors before meeting them.</string>
    <string-array name="SearchResults">
        <item> Available now Harrison Wells  Physics</item>
        <item>     Offline    Barry Allen Criminal Justice </item>
        <item> Available now Cisco Ramon  Mechanical Engineering</item>
        <item>     Online    Catlin Snow  Biology</item>
    </string-array>
    <string name="card_name">Name</string>
    <string name="card_subject">Subject</string>
    <string name="card_walkin">Walkin</string>


    <!-- For Work Manager !-->
    <string name="subject_prompt">Select Subject</string>
</resources>
