<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/cardview_light_background"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_round"
        android:padding="4dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/item_image"
        android:text = "@string/card_name"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/item_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/item_name"
        android:text = "@string/card_subject"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"/>

    <!--add textview for walk in status -->
    <TextView
        android:id="@+id/WalkinStaus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/item_subject"
        android:text = "@string/card_walkin"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"/>
</RelativeLayout>

</android.support.v7.widget.CardView>
