<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal">

    <!-- Login progress -->


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:background="@color/colorLightPrimary"
            android:text="@string/action_sign_up"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/bSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@color/colorLightPrimary"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/logo"
            android:layout_marginTop="41dp"
            android:background="@color/colorLightPrimary"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:text="@string/prompt_email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:layout_marginTop="56dp"
            android:background="@color/colorLightPrimary"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/prompt_password" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Login"
            android:background="@color/colorLightPrimary"
            android:textSize="30sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            app:srcCompat="@mipmap/ic_launcher" />

        <RadioButton
            android:id="@+id/rememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/password"
            android:layout_marginTop="50dp"
            android:background="@color/colorLightPrimary"
            android:text="@string/rememberme"
            android:textSize="12sp" />

        <CheckedTextView
            android:id="@+id/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/rememberme"
            android:layout_alignBottom="@+id/rememberme"
            android:layout_alignParentStart="true"
            android:background="@color/colorLightPrimary"
            android:text="Forgot your Password?" />

    </RelativeLayout>

</LinearLayout>
